<resources>
    <string name="app_name">PracticalTest</string>

    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_do_not_have_account">Do not have an account?</string>
    <string name="label_sign_up">Sign Up</string>

    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_already_have_account">Already have an account?</string>

    <string name="label_home">Home</string>
    <string name="label_favorite">Favorite</string>
    <string name="label_profile">Profile</string>

    <string name="label_search">Search</string>
    <string name="label_latest_news">Latest News</string>
    <string name="label_see_all">See All</string>

    <string name="label_hot_updates">Hot Updates</string>

    <string name="message_no_news">You have no news to show at this moment!</string>
    <string name="message_no_latest_news">You have no latest news to show at this moment!</string>

</resources>